5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1642_2729.log
== TEST (2019-04-13 15:43:24) 
-- CODE:
num1 = int(input("escreva um numero inteiro: "))
num2 = int(input("escreva um numero inteiro: "))
if (num1 * num2 % 2 == 0):
	mensagem = num1 + num2
else:
	mensagem = num 1 - num 2
print(mensagem)
-- ERROR:
File "XXXX", line 6
    mensagem = num 1 - num 2
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:43:36) 
-- CODE:
num1 = int(input("escreva um numero inteiro: "))
num2 = int(input("escreva um numero inteiro: "))
if (num1 * num2 % 2 == 0):
	mensagem = num1 + num2
else:
	mensagem = num1 - num2
print(mensagem)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 15:44:06) 
-- CODE:
num1 = int(input("escreva um numero inteiro: "))
num2 = int(input("escreva um numero inteiro: "))
if (num1 * num2 % 2 == 0):
	mensagem = num1 + num2
else:
	mensagem = num1 - num2
print(mensagem)
-- EXECUTION TIME:
0.177608
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
-4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 15:45:16) 
-- CODE:
num1 = int(input("escreva um numero inteiro: "))
num2 = int(input("escreva um numero inteiro: "))
if (num1 * num2 % 2 == 0):
	mensagem = num1 + num2
else:
	mensagem = num2 - num1
print(mensagem)
-- EXECUTION TIME:
0.204639
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
